--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
     </div>
     <div class="hero-image">
-      <img src="anapovskiy_mazut.png" alt="Анапский мазут">
+      <img src="anapovskiy_mazut_w4.png" alt="Анапский мазут">
     </div>
   </div>
 </section>
@@ -91,7 +91,7 @@
     <div class="collection-grid">
 
       <div class="car-card">
-        <img src="anapovskiy_mazut.png" alt="Анапский мазут">
+        <img src="anapovskiy_mazut_w4.png" alt="Анапский мазут">
         <div class="car-info">
           <h3>Анапский мазут</h3>
           <p>Цена: 420000$ (с золотыми дисками)</p>
@@ -99,7 +99,7 @@
       </div>
 
       <div class="car-card">
-        <img src="zadumchivaya_sliva.png" alt="Задумчивая слива">
+        <img src="zadumchivaya_sliva_w4.png" alt="Задумчивая слива">
         <div class="car-info">
           <h3>Задумчивая слива</h3>
           <p>Цена начинается: 444444$</p>
@@ -107,7 +107,7 @@
       </div>
 
       <div class="car-card">
-        <img src="hohloma.png" alt="Хохломская роспись">
+        <img src="hohloma_w4.png" alt="Хохломская роспись">
         <div class="car-info">
           <h3>Хохломская роспись</h3>
           <p>Цена: 22228$</p>
@@ -115,7 +115,7 @@
       </div>
 
       <div class="car-card">
-        <img src="gzhel.png" alt="Гжель">
+        <img src="gzhel_w4.png" alt="Гжель">
         <div class="car-info">
           <h3>Гжель</h3>
           <p>Цена по договоренности<br>Первый лимитированный заказ для Мамаевой Марии.</p>
@@ -123,7 +123,7 @@
       </div>
 
       <div class="car-card">
-        <img src="ashkudishka.png" alt="Ашкудишка Личи 300 тяг">
+        <img src="ashkudishka_w4.png" alt="Ашкудишка Личи 300 тяг">
         <div class="car-info">
           <h3>Ашкудишка Личи 300 тяг</h3>
           <p>Цена: 300000$<br>Шедевр инженерии со встроенным кальяном.</p>
@@ -131,7 +131,7 @@
       </div>
 
       <div class="car-card">
-        <img src="cocacola_zero.png" alt="CocaCola zero">
+        <img src="cocacola_zero_w4.png" alt="CocaCola zero">
         <div class="car-info">
           <h3>CocaCola zero</h3>
           <p>Лимитированная коллекция для наших РППшниц.<br>"Хочешь есть - попей водички."<br>Цена: 239000$</p>
@@ -139,7 +139,7 @@
       </div>
 
       <div class="car-card">
-        <img src="heroin_needle.png" alt="Героиновая игла">
+        <img src="heroin_needle_w1.png" alt="Героиновая игла">
         <div class="car-info">
           <h3>Героиновая игла</h3>
           <p>Лимитированная коллекция под заказ.<br>"Райское наслаждение"<br>Цена: 670000$</p>
@@ -240,3 +240,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
