--- a/index.html
+++ b/index.html
@@ -156,9 +156,14 @@
 
     <div class="style-builder">
       <div class="style-preview">
+        <!-- 1) Ч/Б корпус -->
         <img id="carImage" src="anapovskiy_mazut.png" alt="машина" class="car">
-        <img id="wheelImage" src="anapovskiy_mazut_w1.png" alt="диски" class="wheel">
+
+        <!-- 2) Цветовой слой -->
         <div id="colorOverlay" class="color-overlay"></div>
+
+        <!-- 3) Диски -->
+        <img id="wheelImage" src="anapovskiy_mazut_w1.png" alt="диски" class="wheel">
       </div>
 
       <div class="style-controls">
@@ -235,6 +240,7 @@
 <script src="script.js?v=2"></script>
 </body>
 </html>
+
 
 
 
