--- a/index.html
+++ b/index.html
@@ -157,31 +157,18 @@
 
     <div class="style-builder">
 
-      <!-- ПРЕВЬЮ АВТО -->
+      <!-- ПРЕВЬЮ -->
       <div class="style-preview">
 
-        <!-- Ч/Б корпус автомобиля -->
-        <img
-          id="carImage"
-          class="car"
-          src="anapovskiy_mazut.png"
-          alt="Корпус автомобиля"
-        >
-
-        <!-- Цветовой слой -->
-        <div id="colorOverlay" class="color-overlay"></div>
-
-        <!-- Диски -->
-        <img
-          id="wheelImage"
-          class="wheel"
-          src="anapovskiy_mazut_w1.png"
-          alt="Диски автомобиля"
-        >
+        <div class="car-canvas">
+          <img id="carImage" src="anapovskiy_mazut.png" class="car" alt="">
+          <div id="colorOverlay" class="color-overlay"></div>
+          <img id="wheelImage" src="anapovskiy_mazut_w1.png" class="wheel" alt="">
+        </div>
 
       </div>
 
-      <!-- УПРАВЛЕНИЕ СТИЛЕМ -->
+      <!-- УПРАВЛЕНИЕ -->
       <div class="style-controls">
 
         <label>
@@ -200,6 +187,7 @@
             <option value="1">Диски 1</option>
             <option value="2">Диски 2</option>
             <option value="3">Диски 3</option>
+            <option value="4">Диски 4</option>
           </select>
         </label>
 
@@ -211,7 +199,6 @@
       </div>
 
     </div>
-
   </div>
 </section>
 
@@ -263,6 +250,7 @@
 <script src="script.js?v=2"></script>
 </body>
 </html>
+
 
 
 
