--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
       <!-- ПРЕВЬЮ -->
       <div class="style-preview">
 
-        <div class="car-canvas">
-          <img id="carImage" src="anapovskiy_mazut.png" class="car" alt="">
-          <div id="colorOverlay" class="color-overlay"></div>
-          <img id="wheelImage" src="anapovskiy_mazut_w1.png" class="wheel" alt="">
-        </div>
+<div class="car-canvas">
+  <img id="wheelImage" class="wheel" src="anapovskiy_mazut_w1.png" alt="">
+  <img id="carImage" class="car" src="anapovskiy_mazut.png" alt="">
+  <div id="colorOverlay" class="color-overlay"></div>
+</div>
 
       </div>
 
@@ -250,6 +250,7 @@
 <script src="script.js?v=2"></script>
 </body>
 </html>
+
 
 
 
