--- a/index.html
+++ b/index.html
@@ -154,20 +154,27 @@
   <div class="container">
     <h2>Создай стиль</h2>
 
-<div class="car-canvas">
+    <div class="style-builder">
 
-  <!-- 1) Цветная картинка -->
-  <img id="carColor" class="car-color" src="anapovskiy_mazut_color.png" alt="Цветная машина">
+      <!-- ПРЕВЬЮ -->
+      <div class="style-preview">
+        <div class="car-canvas">
 
-  <!-- 2) Ч/Б кузов -->
-  <img id="carMask" class="car-mask" src="anapovskiy_mazut_mask.png" alt="Кузов">
+          <!-- 1) Цветная картинка -->
+          <img id="carColor" class="car-color" src="anapovskiy_mazut_color.png" alt="Цветная машина">
 
-  <!-- 3) Цветовой фильтр -->
-  <div id="colorOverlay" class="color-overlay"></div>
+          <!-- 2) Ч/Б кузов -->
+          <img id="carMask" class="car-mask" src="anapovskiy_mazut_mask.png" alt="Кузов">
 
-</div>
+          <!-- 3) Цветовой фильтр -->
+          <div id="colorOverlay" class="color-overlay"></div>
+
+          <!-- 4) Диски -->
+          <img id="wheelImage" class="wheel" src="anapovskiy_mazut_w1.png" alt="Диски">
+        </div>
       </div>
 
+      <!-- УПРАВЛЕНИЕ -->
       <div class="style-controls">
         <label>
           Модель
@@ -193,6 +200,8 @@
           Цвет кузова
           <input type="color" id="colorPicker" value="#ff0000">
         </label>
+
+        <button class="btn" id="saveStyle">Сохранить стиль</button>
       </div>
 
     </div>
@@ -247,6 +256,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
