--- a/index.html
+++ b/index.html
@@ -159,17 +159,15 @@
       <div class="style-preview">
         <div class="car-canvas">
 
-          <!-- 1) Цветная картинка -->
-          <img id="carColor" class="car-color" src="anapovskiy_mazut_color.png" alt="Цветная машина">
+          <!-- 1) Цветная картинка (внизу) -->
+          <img id="carColor" class="car-color" src="anapovskiy_mazut_w1.png" alt="Цветная машина">
 
           <!-- 2) Ч/Б кузов -->
-          <img id="carMask" class="car-mask" src="anapovskiy_mazut_mask.png" alt="Кузов">
+          <img id="carMask" class="car-mask" src="anapovskiy_mazut.png" alt="Кузов">
 
           <!-- 3) Цветовой фильтр -->
           <div id="colorOverlay" class="color-overlay"></div>
 
-          <!-- 4) Диски -->
-          <img id="wheelImage" class="wheel" src="anapovskiy_mazut_w1.png" alt="Диски">
         </div>
       </div>
 
@@ -252,6 +250,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
