--- a/index.html
+++ b/index.html
@@ -156,21 +156,23 @@
 
     <div class="style-builder">
 
+      <!-- ПРЕВЬЮ АВТО -->
       <div class="style-preview">
-        <div class="car-canvas">
 
-          <!-- 1) Цветная картинка (внизу) -->
-          <img id="carColor" class="car-color" src="anapovskiy_mazut_w1.png" alt="Цветная машина">
+        <!-- Цветная машина (нижний слой) -->
+        <img id="carColor" class="carColor" src="anapovskiy_mazut_w1.png" alt="Цветная машина">
 
-          <!-- 2) Ч/Б кузов -->
-          <img id="carMask" class="car-mask" src="anapovskiy_mazut.png" alt="Кузов">
+        <!-- Ч/Б кузов (сверху) -->
+        <img id="carImage" class="carBody" src="anapovskiy_mazut.png" alt="Ч/Б кузов">
 
-          <!-- 3) Цветовой фильтр -->
-          <div id="colorOverlay" class="color-overlay"></div>
+        <!-- Цветовой слой -->
+        <div id="colorOverlay" class="color-overlay"></div>
 
-        </div>
+        <!-- Диски (поверх кузова) -->
+        <img id="wheelImage" class="wheel" src="anapovskiy_mazut_w1.png" alt="Диски">
       </div>
 
+      <!-- УПРАВЛЕНИЕ -->
       <div class="style-controls">
         <label>
           Модель
@@ -188,7 +190,6 @@
             <option value="1">Диски 1</option>
             <option value="2">Диски 2</option>
             <option value="3">Диски 3</option>
-            <option value="4">Диски 4</option>
           </select>
         </label>
 
@@ -250,6 +251,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
