--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
             <option value="1">Диски 1</option>
             <option value="2">Диски 2</option>
             <option value="3">Диски 3</option>
+            <option value="4">Диски 4</option>
           </select>
         </label>
 
@@ -249,6 +250,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
