--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
         <div class="car-canvas">
 
           <!-- 1) цветная картинка (с дисками) -->
-          <img id="carColor" class="car-color" src="anapovskiy_mazut_w1.png" alt="Цветная машина">
+          <img id="carColor" class="car-color" src="anapovskiy_mazut_w1.png" alt="Машина">
 
           <!-- 2) ч/б кузов -->
-          <img id="carMask" class="car-mask" src="anapovskiy_mazut.png" alt="ЧБ кузов">
+          <img id="carMask" class="car-mask" src="anapovskiy_mazut.png" alt="Кузов">
 
           <!-- 3) фильтр -->
           <div id="colorOverlay" class="color-overlay"></div>
@@ -250,6 +250,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
