--- a/index.html
+++ b/index.html
@@ -157,15 +157,26 @@
     <div class="style-builder">
 
       <div class="style-preview">
-<div class="car-canvas">
-  <!-- Цветная картинка (фон) -->
-  <img id="carColor" class="car-color" src="anapovskiy_mazut_w1.png">
 
-  <!-- Кузов + фильтр -->
+  <!-- 1) Цветная картинка (фон) -->
+  <img
+    id="carColor"
+    class="car-color"
+    src="anapovskiy_mazut_w1.png"
+    alt="Цветная машина"
+  >
+
+  <!-- 2) Кузов + фильтр -->
   <div class="car-mask-wrap">
-    <img id="carMask" class="car-mask" src="anapovskiy_mazut.png">
+    <img
+      id="carMask"
+      class="car-mask"
+      src="anapovskiy_mazut.png"
+      alt="Кузов ч/б"
+    >
     <div id="colorOverlay" class="color-overlay"></div>
   </div>
+
 </div>
 
       <div class="style-controls">
@@ -247,6 +258,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
