--- a/index.html
+++ b/index.html
@@ -155,38 +155,24 @@
     <h2>Создай стиль</h2>
 
 <div class="style-preview">
-
-  <!-- 1) Цветная машина (фон) -->
   <img id="carColor" class="car-color" src="anapovskiy_mazut_w1.png" alt="Цветная машина">
-
-  <!-- 2) Кузов (маска) -->
-  <img id="carMask" class="car-mask" src="anapovskiy_mazut.png" alt="Кузов">
-
-  <!-- 3) Фильтр, который будет окрашивать только кузов -->
+  <img id="carMask" class="car-mask" src="anapovskiy_mazut.png" alt="ЧБ кузов">
   <div id="colorOverlay" class="color-overlay"></div>
-
-</div>
 </div>
 
-      <div class="style-controls">
-        <label>
-          Модель
-          <select id="model">
-            <option value="anapovskiy_mazut">Анапский мазут</option>
-            <option value="zadumchivaya_sliva">Задумчивая слива</option>
-            <option value="gzhel">Гжель</option>
-            <option value="ashkudishka">Ашкудишка Личи</option>
-          </select>
-        </label>
+<select id="model">
+  <option value="anapovskiy_mazut">Анапский мазут</option>
+  <option value="zadumchivaya_sliva">Задумчивая слива</option>
+  <option value="gzhel">Гжель</option>
+  <option value="ashkudishka">Ашкудишка Личи</option>
+</select>
 
-        <label>
-          Диски
-          <select id="wheel">
-            <option value="1">Диски 1</option>
-            <option value="2">Диски 2</option>
-            <option value="3">Диски 3</option>
-            <option value="4">Диски 4</option>
-          </select>
+<select id="wheel">
+  <option value="1">Диски 1</option>
+  <option value="2">Диски 2</option>
+  <option value="3">Диски 3</option>
+  <option value="4">Диски 4</option>
+</select>
         </label>
 
         <label>
@@ -247,6 +233,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
